Video playback stops when the tab is detached from window
Categories
(Core :: Graphics, defect)
Tracking
()
People
(Reporter: CoolCmd, Assigned: sotaro)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:76.0) Gecko/20100101 Firefox/76.0
Steps to reproduce:
- open a blank tab
- open another tab with URL https://www.youtube.com/watch?v=LXb3EKWsInQ
- drag and drop active tab to the center of browser window to open it into a new window
Actual results:
after 5 seconds video stops updating, audio is OK .
on https://twitch.tv video starts "breaking" immediately.
Expected results:
video should play
Comment 1•5 years ago
•
|
||
Hi,
I wonder if disabling the pref media.suspend-bkgnd-video.enabled
helps?
Because I'm not able to reproduce this issue, can you help me get the profiler result via Firefox profiler [1] (with Media preset) while you are encoutering this issue again?
Thank you.
media.suspend-bkgnd-video.enabled
does not help.
profiler:
https://share.firefox.dev/2M4QgDd
5 s - detach tab
15 s - video freeze
25 s - video unfreeze (move the mouse cursor over web page)
how to reproduce:
media.webm.enabled
=false
media.hardware-video-decoding.enabled
=true
now browser plays H.264 using hardware decoding. in other configurations this bug not occur. i see this bug on Twitch.tv because it uses H.264.
if video does not freeze, move the mouse cursor to another place, switch to another application, wait 30 seconds.
video adapter: built-in intel cpu
Comment 3•5 years ago
|
||
Did this issue only happen on h264 video with hardware decoding? does it happen on h264 with software decoding or on vp9 with/without hardware decoding?
If you don't move your cursor over the page, would the video keep frozen?
From the profiled result, video kept playing all the time (even if during 15s to 25s), so I wonder if it's a graphic issue.
Did this issue only happen on h264 video with hardware decoding?
yes
does it happen on h264 with software decoding or on vp9 with/without hardware decoding?
no. but my hardware does not support VP9 decoding.
If you don't move your cursor over the page, would the video keep frozen?
yes
From the profiled result, video kept playing all the time
yes, as i said in comment #3, audio is still playing.
Comment 6•5 years ago
|
||
From the profiled result in comment2, we can observe that during 15s to ~23.5s the callstacks in the compositer thread are lower comparing with the callstacks outside this time frame. So I guess this issue might be related with gfx, move this bug to gfx to see if they can find any insight.
Assignee | ||
Comment 7•5 years ago
|
||
(In reply to CoolCmd from comment #0)
User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:76.0) Gecko/20100101 Firefox/76.0
Steps to reproduce:
- open a blank tab
- open another tab with URL https://www.youtube.com/watch?v=LXb3EKWsInQ
- drag and drop active tab to the center of browser window to open it into a new window
Hmm, I could not reproduce the problem. https://www.youtube.com/watch?v=LXb3EKWsInQ used vp9 from "stats for nerd" for me. How do you conformed that the video decoding uses h264 video with hardware decoding?
Actual results:
after 5 seconds video stops updating, audio is OK .
on https://twitch.tv video starts "breaking" immediately.
Can you explain more about https://twitch.tv ? Do you mean it does not needs the above STR to cause the problem?
:CoolCmd, can you provide about:support? Thank you.
Assignee | ||
Updated•5 years ago
|
(In reply to Sotaro Ikeda [:sotaro] from comment #7)
Hmm, I could not reproduce the problem. https://www.youtube.com/watch?v=LXb3EKWsInQ used vp9 from "stats for nerd" for me. How do you conformed that the video decoding uses h264 video with hardware decoding?
see my comment #2:
media.webm.enabled=false
media.hardware-video-decoding.enabled=true
try to playback any live broadcast here: https://www.twitch.tv/directory/game/Fortnite
how to show codecs: click the gear button on video-->advanced-->video stats
Assignee | ||
Comment 10•5 years ago
|
||
(In reply to CoolCmd from comment #2)
media.suspend-bkgnd-video.enabled
does not help.profiler:
https://share.firefox.dev/2M4QgDd
5 s - detach tab
15 s - video freeze
25 s - video unfreeze (move the mouse cursor over web page)
Profiler had D3D9DXVA2Manager functions. It might be related. Gecko uses D3D11DXVA2Manager if possible. D3D9DXVA2Manager is a fallback from D3D11DXVA2Manager.
Assignee | ||
Comment 11•5 years ago
|
||
:CoolCmd, thank you. And can you also provide about:support?
Reporter | ||
Comment 12•5 years ago
|
||
Reporter | ||
Comment 15•5 years ago
|
||
on the same machine i tested a different configuration: windows 10, firefox 78 DE
no issue was found in this configuration
here about:support...
Assignee | ||
Comment 16•5 years ago
|
||
It seems that I could reproduce the problem. I take a look.
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Assignee | ||
Comment 17•5 years ago
|
||
By looking into it, ScheduleComposition() in CompositableParentManager::ReceiveCompositableUpdate() did not trigger correct CompositorBridgeParent's composition. It is a regression of Bug 858914.
Even when the above ScheduleComposition() does not work, video rendering could happen correctly if ImageHost owns enough future video frames. But when D3D9DXVA2Manage is used, there is a case that ImageHost doe not have enough future frames.
Assignee | ||
Comment 18•5 years ago
|
||
Video stop could happen with Tab moving to different window on any non-WebRender composition. And non necessary composition happen on original window.
Assignee | ||
Comment 19•5 years ago
|
||
Assignee | ||
Comment 20•5 years ago
|
||
Updated•5 years ago
|
Assignee | ||
Updated•5 years ago
|
Comment 21•5 years ago
|
||
Comment 22•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Updated•5 years ago
|
Comment 23•5 years ago
|
||
Could not reproduce the issue either.
Dropping the QE+ flag, as a safety check checked with 79.0b5(Win10/macOS 10.15.5) and still no issues up.
@CoolCmd could you check with this build if the issue still manifests for you?
Thank you in advance!
Reporter | ||
Comment 24•5 years ago
|
||
(In reply to Cristian Fogel, QA [:cfogel] from comment #23)
@CoolCmd could you check with this build if the issue still manifests for you?
the bug has been fixed
Comment 25•5 years ago
|
||
Thank you for the reply!
Updating status based on previous comment.
Description
•